2000-06-10  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/pthread/timer_routines.c (list_append): Little fix to
	reall append the entry.

2000-06-10  Andreas Jaeger  <aj@suse.de>

	* lockfile.c (__fresetlockfiles): Remove unused variable fp.

2000-06-10  Kaz Kylheku  <kaz@ashi.footprints.net>

	* sysdeps/pthread/timer_create.c: Thread matching now done on
	clock type as well as thread attributes.
	There are individual global signal-delivering threads for
	different clock types.
	* sysdeps/pthread/posix-timer.h: Likewise.
	* sysdeps/pthread/timer_routines.c: Likewise.

	* sysdeps/pthread/timer_routines.c: Thread allocation and
	deallocation function now remembers to put thread on active
	list and remove from active list.
	Thus now the feature of binding multiple timers
	to a single thread actually works.

2000-06-10  Ulrich Drepper  <drepper@redhat.com>

	* pthread.c (__pthread_create_2_1): Optimize a bit.

	* internals.h (invalid_handle): Also test for p_terminated != 0.
	(nonexisting_handle): New function.  Same as old invalid_handle.
	* join.c (pthread_join): Use nonexisting_handle instead of
	invalid_handle to test for acceptable thread handle.
	* manager.c (pthread_handle_free): Likewise.
	* joinrace.c: New file.
	Reported by Permaine Cheung <pcheung@cygnus.com>.

2000-06-08  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/pthread/timer_routines.c (__timer_thread_queue_timer):
	Correct handling of matching variable.

	* sysdeps/pthread/tst-timer.c (main): Rewrite initializers to
	avoid warnings.

	* sysdeps/pthread/timer_routines.c (__timer_thread_queue_timer):
	Be prepared for empty timer list.

	* sysdeps/pthread/timer_create.c (timer_create): Correct names of
	CPUTIME clock ID.  Add support for thread clocks.

	* sysdeps/pthread/posix-timer.h (timer_ptr2id): Operands in
	subtraction were switched.

	* sysdeps/pthread/timer_routines.c (init_module): Use
	THREAD_MAXNODES threads.

	* sysdeps/pthread/posix-timer.h (struct timer_node): Add creator_pid.