@@ -1,7 +1,15 @@
+2000-06-11  Geoff Keating  <geoffk@cygnus.com>
+
+	* sysdeps/powerpc/pspinlock.c (__pthread_spin_lock): Implement.
+	(__pthread_spin_trylock): Implement.
+	(__pthread_spin_unlock): Implement.
+	(__pthread_spin_init): Implement.
+	(__pthread_spin_destroy): Implement.
+
 2000-06-10  Ulrich Drepper  <drepper@redhat.com>
 
 	* sysdeps/pthread/timer_routines.c (list_append): Little fix to
-	reall append the entry.
+	really append the entry.
 
 2000-06-10  Andreas Jaeger  <aj@suse.de>
 
